# xv6-riscv-lab

./: .gitignore  ABOUT.md  CMakeLists.txt  DOXYGEN_GUIDE.md  Dockerfile  Doxyfile  Makefile  README.md  ROADMAP.md  boot.cmd  container.sh  default.cmd  double_alloc_analyzer.py  env.conf  gdb_list_printer.py  grade-lab-fs  grade-lab-util  gradelib.py  page_log_analyzer.py  xv6.cmd
boot/: CMakeLists.txt  boot.cmd  xv6-tftp.cmd  xv6.cmd
cmake/: doc.cmake  qemu.cmake
kernel/: CMakeLists.txt  backtrace.c  bintree.c  bintree.h  bintree_type.h  bio.c  bits.c  buf.h  compiler.h  console.c  defs.h  e1000.c  e1000_dev.h  entry.S  exec.c  fcntl.h  file.c  file.h  fs.c  fs.h  hlist.c  hlist.h  hlist_type.h  kalloc.c  kernel.ld  kernel.ld.in  kernelvec.S  kobject.c  ksymbols_placeholder.S  list.h  log.c  main.c  memlayout.h  mutex.c  mutex_types.h  net.c  net.h  page.c  page.h  page_private.h  (+59 more)
kernel/dev/: CMakeLists.txt  bio.c  blkdev.c  cdev.c  dev.c  dev.h  dev_test.c  dev_types.h  fdt.c
kernel/fs/: vfs.c  vfs.h  vfs_types.h
kernel/inc/: CMakeLists.txt  README.md  atomic.h  bintree.h  bintree_type.h  bio.h  bio_types.h  bits.h  blkdev.h  buf.h  cdev.h  clone_flags.h  compiler.h  completion.h  completion_types.h  defs.h  dev.h  dev_types.h  e1000_dev.h  early_allocator.h  elf.h  errno.h  fcntl.h  fdt.h  file.h  file_ops.h  freelist.h  fs.h  hlist.h  hlist_type.h  ipi.h  kobject.h  list.h  list_type.h  llist.h  memlayout.h  memstat.h  mutex_types.h  net.h  page.h  (+48 more)
kernel/inc/dev/: bio.h  bio_types.h  blkdev.h  buf.h  cdev.h  dev.h  dev_types.h  e1000_dev.h  fdt.h  net.h  pci.h  plic.h  uart.h  virtio.h  virtqueue.h
kernel/inc/lock/: completion.h  completion_types.h  mutex_types.h  rcu.h  rcu_type.h  rwlock.h  rwlock_types.h  rwsem.h  rwsem_types.h  semaphore.h  semaphore_types.h  spinlock.h
kernel/inc/mm/: early_allocator.h  memlayout.h  page.h  page_type.h  pcache.h  pcache_types.h  slab.h  slab_type.h  vm.h  vm_types.h
kernel/inc/proc/: proc.h  proc_queue.h  proc_queue_type.h  proc_types.h  rq.h  rq_types.h  sched.h  thread.h  thread_group.h  thread_group_types.h  thread_types.h  tq.h  tq_type.h  workqueue.h  workqueue_types.h
kernel/inc/smp/: atomic.h  ipi.h  percpu.h  percpu_types.h
kernel/inc/timer/: goldfish_rtc.h  timer.h  timer_types.h
kernel/inc/vfs/: fcntl.h  file.h  fs.h  stat.h  vfs_types.h
kernel/inc/vfs/xv6fs/: ondisk.h
kernel/interruption/: CMakeLists.txt  ipi.c  irq.c  kernelvec.S  plic.c  syscall.c  trampoline.S  trap.c
kernel/ipi/: CMakeLists.txt  ipi.c
kernel/irq/: CMakeLists.txt  irq.c  kernelvec.S  plic.c  syscall.c  trampoline.S  trap.c
kernel/lock/: CMakeLists.txt  RCU_README.md  completion.c  mutex.c  rcu.c  rcu_test.c  rwlock.c  rwlock_test.c  rwsem.c  rwsem_test.c  semaphore.c  semaphore_test.c  spinlock.c
kernel/mm/: CMakeLists.txt  early_allocator.c  kalloc.c  page.c  page_private.h  pcache.c  slab.c  slab_private.h  sysmm.c  vm.c
kernel/proc/: CMakeLists.txt  SCHEDULER_DESIGN.md  clone.c  exit.c  pid.c  proc.c  proc_private.h  proc_queue.c  rq.c  rq_test.c  sched.c  sched_fifo.c  sched_idle.c  sched_timer.c  sched_timer_private.h  sig_trampoline.S  signal.c  swtch.S  sys_signal.c  sysproc.c  thread.c  thread_group.c  thread_queue.c  timer.c  workqueue.c
kernel/timer/: CMakeLists.txt  goldfish_rtc.c  sched_timer.c  timer.c
kernel/vfs/: CMakeLists.txt  UNMOUNT_DESIGN.md  VFS_DESIGN.md  fdtable.c  file.c  fs.c  inode.c  rootfs.c  superblock.c  vfs.c  vfs.h  vfs_private.h  vfs_syscall.c  vfs_types.h
kernel/vfs/tmpfs/: CMakeLists.txt  file.c  inode.c  superblock.c  tmpfs_private.h  tmpfs_smoketest.c  tmpfs_smoketest.h  truncate.c
kernel/vfs/xv6fs/: CMakeLists.txt  block_cache.c  block_cache.h  file.c  file.h  fs.h  inode.c  log.c  superblock.c  truncate.c  xv6fs.h  xv6fs_private.h  xv6fs_smoketest.c  xv6fs_smoketest.h
mkfs/: mkfs.c
opensbi/: .gitignore  CMakeLists.txt
scripts/: README_gen_asm_offsets.md  embed_ksymbols.py  estimate_symbol_size.py  gen_addrline.sh  gen_asm_offsets.py  gen_ksymbols_placeholder.py  gen_ksymbols_section.py  patch_image_size.py
test/: CMakeLists.txt  MOCK_NOTES.md  Makefile  README  WRAPPER_MODULES.md  common.h  list_test.c
test/cmake/: FetchCmocka.cmake
test/include/: common.h  concurrency_harness.h  hlist_mock.h  hlist_type_mock.h  host_test_stubs.h  test_numbers.h  tmpfs_test_env.h  ut_list.h  ut_mock_wraps.h  ut_page.h  ut_page_wraps.h  ut_rbtree.h  ut_slab.h  ut_slab_wraps.h  ut_thread.h  wrapper_tracking.h
test/include/semaphore_stubs/: proc.h  sched.h
test/src/: concurrency_harness.c  hlist_mock.c  list_test.c  panic_stubs.c  pcache_test_stubs.c  semaphore_runtime_stubs.c  ut_bits_main.c  ut_early_allocator_main.c  ut_hlist_main.c  ut_list_main.c  ut_mock_main.c  ut_mock_wraps.c  ut_page_main.c  ut_page_wraps.c  ut_pcache_main.c  ut_pcache_stubs.c  ut_rbtree_main.c  ut_rwlock_main.c  ut_semaphore_main.c  ut_slab_main.c  ut_slab_main.h  ut_slab_wraps.c  ut_thread.c  ut_tmpfs_truncate_linked.c  ut_tmpfs_truncate_main.c.bak
test/src/wrappers/: README.md  completion_wrappers.c  cpu_wrappers.c  kmm_wrappers.c  page_wrappers.c  panic_wrappers.c  proc_wrappers.c  scheduler_wrappers.c  slab_wrappers.c  spinlock_wrappers.c  syscall_wrappers.c  timer_wrappers.c  workqueue_wrappers.c
user/: CMakeLists.txt  bigfile.c  cat.c  clonetest.c  cowtest.c  devtest.c  dumpchan.c  dumpfd.c  dumpinode.c  dumppcache.c  dumprq.c  echo.c  find.c  forktest.c  free.c  grep.c  grind.c  hello_musl.c  init.c  kill.c  ln.c  ls.c  mkdir.c  mknod.c  mmaptest.c  mount.c  pingpong.c  primes.c  printf.c  ps.c  rm.c  sh.c  sleep.c  stressfs.c  symlinktest.c  sync.c  testsig.c  ulib.c  umalloc.c  umount.c  (+8 more)
user/libc/include/: errno.h  fcntl.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
user/libc/include/sys/: stat.h  time.h  types.h
user/libc/patches/: musl-xv6-port.patch
user/libc/src/: musl_port_stubs.c
user/libc/src/errno/: errno.c
utils/: Makefile  README.md  rbtree.c  rbtree.h  run_full_test.sh  xv6fuse.c
